--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <input disabled id="foo" type="text" value="Lorem ipsum dolor sit amet consectetur adipiscing elit Nullam eleifend odio at magna pretium suscipit Nam commodo mauris felis ut suscipit velit efficitur eget Sed sit amet posuere risus">
+  <input disabled id="foo" type="text" value="elitNullameleifendodioatmagnapretiumsuscipitNamcommodomaurisfelisutsuscipitvelitefficituregetSedsit4444444444444444444445477ametposuererisus">
 
   <script src="./script.js"></script>
 </body>
