--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <input disabled id="foo" type="text" value="elitNullameleifendodioatmagnapretiumsuscipitNa fendodioatmagnapretiumsuscipitNamc fendodioatmagnapretiumsuscipitNamc fendodioatmagnapretiumsuscipitNamcmcommodomaurisfelisutsuscipitvelitefficituregetSedsit4444444444444444444445477ametposuererisus">
+  <input disabled id="input" type="text" value="elitNullameleifendodioatmagnapretfggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff">
 
   <script src="./script.js"></script>
 </body>
